# voxels-vulkano

./: .gitignore  Cargo.toml  cube_verts.blend  rustfmt.toml  stats.txt
helpers/: generate_nearby_cuboid_offsets.py  nearby_cuboid_offsets.txt
src/: app.rs  ca.rs  camera.rs  main.rs  mesher.rs  sector.rs  utils.rs
src/app/: camera.rs  chunk.rs  feed.rs  world.rs
src/app/world/: chunk.rs
