[package]
name = "cube"
version = "0.1.0"
authors = ["Steve Larsen <f3bl@gmx.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.18"
ncollide3d = "0.19"
nalgebra-glm = "0.4"
vulkano = "0.10"
vulkano_text = "0.8"
vulkano-shader-derive = "0.10"
vulkano-shaders = "0.10"
vulkano-win = "0.10"
cgmath = "0.16"
image = "0.19"
winit = "0.17"
time = "0.1.37"
rand = "0.6.5"
rayon = "1.0"
crossbeam-channel = "0.3.8"
